Fixed headers and broadcasts for new dstores

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,17 +6,10 @@
   * An item's placement is set by
     - the `beforeId` parameter in `put()`
     - or at the end unless the store's `defaultNewToStart` is set to `true` 
-  * In Memory.js, the JS library has access to the store; so, when adding to Memory without beforeId, Memory checks for the store's `defaultNewToStart` attribute to see where to place the element
-  * In Rest.js, if `options.beforeId` is set and it's not `null` (which means "place last"), `then X-Put-Before` is set. If `options.beforeId` is `null` (which means "place last"), then `X-Put-Default-Position` is set to `end`. Otherwise, if `options.beforeId` is undefined, then `X-Put-Default-Position` will depend on the store's `defaultNewToStart` (it will be `start` or `end`). Note that `X-Put-Default-Position` is used in two cases: 1) To mean "place at the end" when `options.beforeId` is `null` 2) To place the item at beginning or end, depending on `store.defaultNewToStart`, when `options.beforeId` isn't set. This solves elegantly the problem of having `options.beforeId` mean two things in the store (`null` meaning "at the end"), but actually only being able to pass a string (through the HTTP header) to the server (in which context `null` is not possible to pass, unless you want the 4-byte string `null` to mean something specific). 
+  * In Memory.js, the JS library has access to the store; so, when adding to Memory without beforeId, Memory checks for the store's `defaultNewToStart` attribute to see where to place the element. When `beforeId` is set to `null`, then `defaultNewToStart` is ignored and element is added at the end.
+  * In Rest.js, if `options.beforeId` is set and it's not `null` (which would mean "place last"), then the header `X-Put-Before` is set. If `options.beforeId` is `null` (which means "place last"), then the header `X-Put-Default-Position` is set to `end`. Otherwise, if `options.beforeId` is undefined, then the header `X-Put-Default-Position` will depend on the store's `defaultNewToStart` (it will be `start` or `end`). Note that `X-Put-Default-Position` is used in two cases: 1) To mean "place at the end" when `options.beforeId` is `null` 2) To place the item at beginning or end, depending on `store.defaultNewToStart`, when `options.beforeId` isn't set. This solves elegantly the problem of having `options.beforeId` mean two things in the store (`null` meaning "at the end"), but actually only being able to pass a string (through the HTTP header) to the server (in which context `null` is not possible to pass, unless you want the 4-byte string `null` to mean something specific). 
   * The server doesn't know anything about the store; for positioning, two headers are used" `X-Put-Before` and `X-Put-Default-Position`. If the server tracks natural ordering for the collection, it will 1) Check if `X-Put-Before` is set. If so, will need to place the item there 2) OR check `X-Put-Default-Position` -- if it's `end`, it will place things at the end. If it's `start`, it will place the item as first. 
   
-"JsonRestStores"
-* Add option defaultNewToStart at reposition()
-* Change reposition(), make it so that
-  - it decides whether to do repositioning basd on positionField
-  - if beforeId is specified, positions based on beforeId (null for the end, or spot)
-  - if beforeId isn't specified, position at end by default, unless defaultNewToStart is set
-  - party!
 
   ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
   Previous notes
@@ -33,6 +26,12 @@
   BUT! This means using the put() as a "mover" (with repositionOnly, and with the data not really mattering); this is too hacky, and definitely not worth it in terms of complications. Refreshes are saved by the caching store, and adding too much complication for the sake of a few posted bites is meaningless. If anything, there should be a "reposition" method in the store.
   +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
+  [X] Add option defaultNewToStart at reposition()
+  [X] Change reposition(), make it so that
+    - it decides whether to do repositioning basd on positionField
+    - if beforeId is specified, positions based on beforeId (null for the end, or spot)
+    - if beforeId isn't specified, position at end by default, unless defaultNewToStart is set
+  [X] Party!
 
   [X] DO: Update hotplate to latest dstore/dgrid, keeping changes files (DnD.js in dgrid, nothing in dstore)
   [X] PATCH: dgrid, emit events and make sure things are not deleted
@@ -48,11 +47,16 @@
   [X] FIX: Work out why in Observable, #243, you need `if ( object && store.getIdentity(object) == targetId) {`
   [X] FIX: Code that observes auth buttons, now that I have the object on delete
   [X] DO: Add memory cache back to application (injecting values will now work)
-  [ ] FIX: AppStoreNotify, solve TODO: needs to know whether it's a creation or an update
-  [ ] CHECK: https://github.com/SitePen/dstore/issues/38, see minimim requirements in event object
+  [X] CHECK: make sure the right message is broadcast, `put` can create or update, make sure it's right one
+  [X] FIX: AppStoreNotify to use store's events rather than aspects to get events, which will fix TODO in it too
+  [X] FIX: Make sure that Rest.js emits right event, create/update depending on HTTP response
+  [X] FIX: Reposition mustn't be called on putExisting unless beforeId is specified
+  [X] DO: Rewrite code to only force refresh when actually needed (maybe patch dstore with shouldRefresh)
+  [X] FIX: headers in Rest.js and JsonRestStores.js and hotCoreJsonRestStores.js (work out what is sent first)
+  [X] CHECK: Application making sure that everything happens as it should, reordering/moving/editing etc.
+
   [ ] CHECK: If user is booted out, it still asks for password to let them back in, Resume.js line 62 
-  [ ] DO: Rewrite code to only force refresh when actually needed (maybe patch dstore with shouldRefresh)
-  [ ] FIX: make sure the right message is broadcast, `put` can create or update, make sure it's right one
+  [ ] Create own repository for dstore, send pull request for status 201, commit with own stores properly
 
   [ ] DO: Write page with all query options, https://github.com/SitePen/dstore/pull/29#issuecomment-46746382
 
